data/Java/15-incomp-return-types/5/[M]Error.txt
https://teamtreehouse.com/community/incompatible-types-unexpected-return-value-return-counter
ScrabblePlayer.java:27: error: incompatible types: unexpected return value
    return counter;
           ^